feat: Creacion de directorios y diseño de la pestaña de about

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,22 @@
+<component-header></component-header>
 
-<router-outlet />
+<main class="mt-25 mx-20">
+  <section class="mb-10 section" id="about">
+    <component-about></component-about>
+  </section>
+  <section class="mb-10" id="skills">
+    <component-skills></component-skills>
+  </section>
+  <section class="mb-10" id="contact">
+    <component-contact></component-contact>
+  </section>
+  <section class="mb-10" id="education">
+    <component-education></component-education>
+  </section>
+  <section class="mb-10" id="experience">
+    <component-experience></component-experience>
+  </section>
+  <section class="mb-10" id="goals">
+    <component-goals></component-goals>
+  </section>
+</main>
