--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @use "tailwindcss";
+
+html {
+  scroll-behavior: smooth;
+}
+
+section {
+  scroll-margin-top: 80px; /* o lo que mida tu header */
+}
+
+p,h1,h2,h3,h4,h5,h6{
+  color: white;
+}
