feat: Mejora en el diseño del navbar

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,56 @@
-<nav class="fixed top-0 left-0 right-0 bg-white index shadow-md">
-  <ul class="flex justify-end gap-4 p-4">
-    <li><a href="#about" class="hover:underline">Sobre mí</a></li>
-    <li><a href="#skills" class="hover:underline">Habilidades</a></li>
-    <li><a href="#education" class="hover:underline">Proyectos</a></li>
-    <li><a href="#contact" class="hover:underline">Contacto</a></li>
-    <li><a href="#experience" class="hover:underline">Experiencia</a></li>
-    <li><a href="#goals" class="hover:underline">Metas</a></li>
+<nav
+  class="fixed top-0 left-0 right-0 bg-orange-700 z-50 shadow-md flex items-center justify-between"
+>
+  <div class="mx-5">
+    <img
+      src="assets/images/faviconWolf.svg"
+      alt="Logo"
+      class="h-12 w-12 min-w-12 min-h-12"
+    />
+  </div>
+
+  <ul class="flex justify-end gap-4 p-4 mx-15">
+    <li>
+      <a
+        href="#about"
+        class="nav-link text-xl text-white font-bold py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition"
+        >Sobre mí</a
+      >
+    </li>
+    <li>
+      <a
+        href="#skills"
+        class="nav-link font-bold text-xl text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition"
+        >Habilidades</a
+      >
+    </li>
+    <li>
+      <a
+        href="#education"
+        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition"
+        >Proyectos</a
+      >
+    </li>
+    <li>
+      <a
+        href="#contact"
+        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition"
+        >Contacto</a
+      >
+    </li>
+    <li>
+      <a
+        href="#experience"
+        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition"
+        >Experiencia</a
+      >
+    </li>
+    <li>
+      <a
+        href="#goals"
+        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition"
+        >Metas</a
+      >
+    </li>
   </ul>
 </nav>
