feat: Agregando seccion de habilidades y eliminando la carpeta de contact

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -53,7 +53,7 @@
     </button>
     <button
       (click)="goToLinkedlin()"
-      class="m-2 self-start bg-slate-50 hover:bg-slate-100 text-black py-2 px-4 rounded-[1vw]"
+      class="m-2 self-start bg-slate-50 hover:bg-gray-300 text-black py-2 px-4 rounded-[1vw]"
     >
       <i class="fa-brands fa-linkedin-in"></i>
     </button>
