--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -13,28 +13,33 @@
     </h2>
 
     <p>
-      🎯 Hola yo soy Mario, Ingeniero de Sistemas con más de 5 años construyendo
-      aplicaciones web y móviles eficientes, escalables y centradas en el
-      usuario, usando tecnologías como
+      🍄 Hola yo soy Mario, Ingeniero de Sistemas con más de 5 años construyendo
+      sistemas eficientes, escalables y centrados en el usuario, usando
+      tecnologías como
       <span class="text-orange-600">Angular, Flutter, C#, ASP.NET</span> con
       enfoque en resultados reales y experiencia comprobada.
     </p>
   </div>
   <div class="w-full md:flex-1 p-4 flex flex-col items-center justify-center">
     <img
-      src="assets/images/profile.jpg"
+      src="assets/images/profile.webp"
       alt="Foto de perfil"
       class="rounded-full object-cover w-40 h-40 sm:w-60 sm:h-60 md:w-72 md:h-72 lg:w-80 lg:h-80"
     />
   </div>
 </div>
 
-<div class="flex mt-5 flex-wrap gap-4">
+<p class="p-4">
+  Email: <span class="text-orange-600">marioramosmejia2243&#64;gmail.com</span>
+</p>
+
+<div class="flex mt-5 flex-wrap">
   <div>
     <button
       (click)="downloadPdf()"
       class="w-full m-2 md:w-auto mr-15 self-start bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
     >
+      <i class="mr-2 fa-solid fa-download hidden md:inline"></i>
       Descargar CV
     </button>
   </div>
