--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -26,7 +26,7 @@
   <div class="inline-flex flex-col w-20 items-center m-4">
     <p class="mt-1 text-sm">C#</p>
     <div
-      class="bg-yellow-500 text-white mt-3 py-2 px-4"
+      class="bg-purple-500 text-white mt-3 py-2 px-4"
       style="border-radius: 0.5rem"
     >
       <img
@@ -50,6 +50,21 @@
   </div>
 
   <div class="inline-flex flex-col w-20 items-center m-4">
+    <p class="mt-1 text-sm">TypeScript</p>
+    <div
+      class="bg-sky-600 text-white mt-3 py-2 px-4"
+      style="border-radius: 0.5rem"
+    >
+      <img
+        class="w-4 h-6 object-contain"
+        src="assets/icons/typescript.png"
+        alt="Foto de perfil"
+      />
+    </div>
+    <p class="mt-1 text-sm">Avanzado</p>
+  </div>
+
+  <div class="inline-flex flex-col w-20 items-center m-4">
     <p class="mt-1 text-sm">Html</p>
     <div
       class="bg-orange-600 text-white mt-3 py-2 px-4"
@@ -68,7 +83,7 @@
     >
       <img
         class="w-4 h-6 object-contain"
-        src="assets/icons/social.png"
+        src="assets/icons/asp-net.png"
         alt="Foto de perfil"
       />
     </div>
@@ -89,7 +104,7 @@
   <div class="inline-flex flex-col w-20 items-center m-4">
     <p class="mt-1 text-sm">Bootstrap</p>
     <div
-      class="bg-violet-600 text-white mt-3 py-2 px-4"
+      class="bg-violet-700 text-white mt-3 py-2 px-4"
       style="border-radius: 0.5rem"
     >
       <i class="fa-brands fa-bootstrap"></i>
@@ -133,12 +148,12 @@
   <div class="inline-flex flex-col w-20 items-center m-4">
     <p class="mt-1 text-sm">Tailwind</p>
     <div
-      class="bg-white text-black mt-3 py-2 px-4"
+      class="bg-blue-600 text-black mt-3 py-2 px-4"
       style="border-radius: 0.5rem"
     >
       <img
         class="w-4 h-6 object-contain"
-        src="assets/icons/tailwind-css.svg"
+        src="assets/icons/tailwind.svg"
         alt="Foto de perfil"
       />
     </div>
