--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -21,11 +21,8 @@
     </p>
   </div>
   <div class="w-full md:flex-1 p-4 flex flex-col items-center justify-center">
-    <img
-      src="assets/images/profile.webp"
-      alt="Foto de perfil"
-      class="rounded-full object-cover w-40 h-40 sm:w-60 sm:h-60 md:w-72 md:h-72 lg:w-80 lg:h-80"
-    />
+    <img src="assets/images/profile.webp" alt="Foto de perfil"
+      class="rounded-full object-cover w-40 h-40 sm:w-60 sm:h-60 md:w-72 md:h-72 lg:w-80 lg:h-80" />
   </div>
 </div>
 
@@ -35,43 +32,31 @@
 
 <div class="flex mt-5 flex-wrap">
   <div>
-    <button
-      (click)="downloadPdf()"
-      class="w-full m-2 md:w-auto mr-15 self-start bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
-    >
+    <button (click)="downloadPdf()"
+      class="w-full m-2 md:w-auto mr-15 self-start bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
       <i class="mr-2 fa-solid fa-download hidden md:inline"></i>
       Descargar CV
     </button>
   </div>
   <div>
-    <button
-      (click)="goToGithub()"
-      class="m-2 self-start bg-violet-600 hover:bg-violet-700 text-white py-2 px-4 rounded-[1vw]"
-    >
+    <button (click)="goToGithub()"
+      class="m-2 self-start bg-violet-600 hover:bg-violet-700 text-white py-2 px-4 rounded-[1vw]">
       <i class="fa-brands fa-github"></i>
     </button>
-    <button
-      (click)="goToFacebook()"
-      class="m-2 self-start bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded-[1vw]"
-    >
+    <button (click)="goToFacebook()"
+      class="m-2 self-start bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded-[1vw]">
       <i class="fa-brands fa-facebook"></i>
     </button>
-    <button
-      (click)="goToLinkedlin()"
-      class="m-2 self-start bg-slate-50 hover:bg-gray-300 text-black py-2 px-4 rounded-[1vw]"
-    >
+    <button (click)="goToLinkedlin()"
+      class="m-2 self-start bg-slate-50 hover:bg-gray-300 text-black py-2 px-4 rounded-[1vw]">
       <i class="fa-brands fa-linkedin-in"></i>
     </button>
-    <button
-      (click)="goToTiktok()"
-      class="m-2 self-start bg-stone-700 hover:bg-stone-800 text-white py-2 px-4 rounded-[1vw]"
-    >
+    <button (click)="goToTiktok()"
+      class="m-2 self-start bg-stone-700 hover:bg-stone-800 text-white py-2 px-4 rounded-[1vw]">
       <i class="fa-brands fa-tiktok"></i>
     </button>
-    <button
-      (click)="goToEmail()"
-      class="m-2 self-start bg-indigo-600 hover:bg-indigo-700 text-white py-2 px-4 rounded-[1vw]"
-    >
+    <button (click)="goToEmail()"
+      class="m-2 self-start bg-indigo-600 hover:bg-indigo-700 text-white py-2 px-4 rounded-[1vw]">
       <i class="fa-solid fa-envelope"></i>
     </button>
   </div>
