--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,1 +1,128 @@
-<p>education works!</p>
+<h4 class="text-3xl  font-bold mb-5">Educación / Aprendizaje</h4>
+
+<div class=" mb-10">
+    <h3 class="text-xl font-semibold">Ingeniero de Sistemas <i class="ml-2 fa-solid fa-graduation-cap"></i></h3>
+    <p class="text-gray-400">Universidad Nacional de Ingeniería (UNI) - Nicaragua</p>
+</div>
+
+<p class="mb-5 text-xl font-semibold">Linea de aprendizaje</p>
+
+<ol class="items-start sm:flex">
+    <li class="relative mb-6 sm:mb-0">
+        <div class="flex items-center">
+            <div
+                class="z-10 flex items-center justify-center w-6 h-6 bg-red-600 text-white rounded-full ring-0 ring-white  sm:ring-8 dark:ring-gray-900 shrink-0">
+                <i class="fa-brands fa-angular"></i>
+            </div>
+            <div class="hidden sm:flex w-full bg-orange-600 h-0.5 dark:bg-orange-700"></div>
+        </div>
+        <div class="mt-3 sm:pe-8">
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Angular y Figma</h3>
+            <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+                2019</time>
+
+            <ul class="list-disc md:list-disc ...">
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Desarrollo de interfaces SPA con
+                    Angular
+                    y
+                    TypeScript.</li>
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Integración con servicios REST y
+                    gestión de formularios reactivos.</li>
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Maquetado con Bootstrap, diseño en
+                    Figma.</li>
+            </ul>
+
+        </div>
+    </li>
+    <li class="relative mb-6 sm:mb-0">
+        <div class="flex items-center">
+            <div
+                class="z-10 flex items-center justify-center w-6 h-6 bg-purple-500 text-white rounded-full ring-0 ring-white  sm:ring-8 dark:ring-gray-900 shrink-0">
+                <img class="w-4 h-6 object-contain" src="assets/icons/c-sharp.png" alt="Foto de perfil" />
+            </div>
+            <div class="hidden sm:flex w-full bg-orange-600 h-0.5 dark:bg-orange-700"></div>
+        </div>
+        <div class="mt-3 sm:pe-8">
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">C# y ASP.NET</h3>
+            <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">2021</time>
+
+            <ul class="list-disc md:list-disc ...">
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Desarrollo de backend robusto con
+                    ASP.NET
+                    y C#.</li>
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Gestión de base de datos con SQL
+                    Server.</li>
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Control de procesos administrativos
+                    como
+                    nómina, asistencia y reportes.</li>
+            </ul>
+        </div>
+    </li>
+    <li class="relative mb-6 sm:mb-0">
+        <div class="flex items-center">
+            <div
+                class="z-10 flex items-center justify-center w-6 h-6 bg-blue-600 text-white rounded-full ring-0 ring-white  sm:ring-8 dark:ring-gray-900 shrink-0">
+                <i class="fa-brands fa-flutter"></i>
+            </div>
+            <div class="hidden sm:flex w-full bg-orange-600 h-0.5 dark:bg-orange-700"></div>
+        </div>
+        <div class="mt-3 sm:pe-8">
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Flutter y Scrum</h3>
+            <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">2023</time>
+
+            <ul class="list-disc md:list-disc ...">
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Desarrollo multiplataforma con
+                    Flutter.</li>
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Arquitectura limpia, uso de Riverpod
+                    para
+                    gestión de estado.</li>
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Medologia ágil (Scrum), gestión con
+                    Jira y Trello.</li>
+                <li class="text-base font-normal text-gray-500 dark:text-gray-400">Maquetado moderno con Tailwind.</li>
+
+            </ul>
+        </div>
+    </li>
+
+
+
+
+
+</ol>
+
+<div class="relative w-full max-w-full lg:max-w-[50vw] overflow-hidden">
+    <div class="flex items-center justify-between ">
+
+        <div class="w-full overflow-hidden">
+            <div class="flex transition-transform duration-500 ease-in-out"
+                [ngStyle]="{ transform: 'translateX(-' + currentIndex() * 80 + '%)' }">
+                <div *ngFor="let cert of certificados; let i = index"
+                    class="flex-shrink-0 w-[80%] mx-2 transition-transform transform scale-90 hover:scale-100">
+                    <img [src]="cert" class="rounded-lg shadow-lg w-full object-contain" />
+                </div>
+            </div>
+        </div>
+
+        <!-- Botón Anterior -->
+        <button type="button" (click)="prev()"
+            class="absolute left-2 top-1/2 -translate-y-1/2 flex items-center justify-center  cursor-pointer group focus:outline-none">
+            <span
+                class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-orange-600 hover:bg-orange-700">
+                <svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+                </svg>
+            </span>
+        </button>
+
+        <!-- Botón Siguiente -->
+        <button type="button" (click)="next()"
+            class="absolute right-2 top-1/2 -translate-y-1/2 z-30 flex items-center justify-center  cursor-pointer group focus:outline-none">
+            <span
+                class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-orange-600 hover:bg-orange-700">
+                <svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+                </svg>
+            </span>
+        </button>
+    </div>
+</div>
