--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -398,7 +398,7 @@
 
       @if (images().length>1) {
       <!-- Botón Anterior -->
-      <button type="button" (click)="prev()"
+      <button type="button" (click)="prevImage()"
         class="absolute left-2 top-1/2 -translate-y-1/2 flex items-center justify-center px-2 cursor-pointer group focus:outline-none">
         <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-orange-600 hover:bg-orange-700">
           <svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
