feat: Creacion de la seccion de metas y proyectos personales

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,10 @@
     <component-skills></component-skills>
   </section>
 
+  <section class="mb-10" id="portfolio">
+    <component-portfolio></component-portfolio>
+  </section>
+
   <section class="mb-10" id="education">
     <component-education></component-education>
   </section>
