--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -89,6 +89,7 @@
 
 
 </ol>
+<p class="mb-5 text-xl font-semibold">Certificados</p>
 
 <div class="relative w-full max-w-full lg:max-w-[50vw] overflow-hidden">
     <div class="flex items-center justify-between ">
