--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,17 +10,20 @@
         mí</a>
     </li>
     <li>
+      <a href="#experience"
+        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Experiencia</a>
+    </li>
+    <li>
       <a href="#skills"
         class="nav-link font-bold text-xl text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Habilidades</a>
     </li>
     <li>
-      <a href="#education"
-        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Proyectos</a>
+      <a href="#portfolio"
+        class="nav-link font-bold text-xl text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Personal</a>
     </li>
-
     <li>
-      <a href="#experience"
-        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Experiencia</a>
+      <a href="#education"
+        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Educación</a>
     </li>
     <li>
       <a href="#goals"
