--- a/src/app/components/goals/goals.component.html
+++ b/src/app/components/goals/goals.component.html
@@ -1,1 +1,63 @@
-<p>goals works!</p>
+<h4 class="text-3xl font-bold mb-5">Metas a futuro</h4>
+
+<div class="flex flex-wrap -mx-3">
+    <div class="w-full md:w-1/2 lg:w-1/3 p-3">
+        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-lg shadow-sm hover:bg-gray-700">
+            <div class="flex justify-center">
+                <img class="object-contain h-50 w-50" src="assets/images/metas/React.png" alt="">
+            </div>
+            <div class="flex flex-col justify-between p-4 leading-normal">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">React</h5>
+                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                    Quiero aprender React porque me apasiona el desarrollo frontend y considero importante dominar las
+                    tecnologías más relevantes del mercado.
+                    <br><br>
+                    Me interesa comprender a fondo por qué tantos desarrolladores y empresas eligen React frente a otras
+                    alternativas. Además, quiero adquirir experiencia
+                    práctica con su ecosistema (como Next.js, React Router, y Redux) para desarrollar interfaces
+                    dinámicas,
+                    escalables y con una excelente experiencia de usuario.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="w-full md:w-1/2 lg:w-1/3 p-3">
+        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-lg shadow-sm hover:bg-gray-700">
+            <div class="flex justify-center">
+                <img class="object-contain h-50 w-50" src="assets/images/metas/go.png" alt="">
+            </div>
+            <div class="flex flex-col justify-between p-4 leading-normal">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Go</h5>
+                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                    Me interesa aprender Go (Golang) porque es un lenguaje moderno, eficiente y muy valorado en el
+                    desarrollo de software backend. Su sintaxis simple, rendimiento cercano al de C y su excelente
+                    manejo de concurrencia lo hacen ideal para crear aplicaciones escalables, microservicios y sistemas
+                    de alto rendimiento.
+                    <br><br>
+                    Además, Go es utilizado por grandes empresas como Google, Docker y Uber, lo que demuestra su solidez
+                    y relevancia en entornos reales de producción. Quiero dominarlo para ampliar mis capacidades como
+                    desarrollador backend y poder construir soluciones robustas, rápidas y mantenibles.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="w-full md:w-1/2 lg:w-1/3 p-3">
+        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-lg shadow-sm hover:bg-gray-700">
+            <div class="flex justify-center">
+                <img class="object-contain h-50 w-50" src="assets/images/metas/nodejs.webp" alt="">
+            </div>
+            <div class="flex flex-col justify-between p-4 leading-normal">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Node js</h5>
+                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                    Quiero aprender Node.js porque me encanta la idea de usar JavaScript también en el backend. Me
+                    parece genial poder trabajar todo el stack con un solo lenguaje.
+                    <br><br>
+                    Además, Node es rápido, moderno y tiene una comunidad enorme que siempre está creando cosas
+                    increíbles. Es muy usado para construir APIs, apps en tiempo real, y proyectos escalables, lo que lo
+                    hace súper útil en el mundo actual del desarrollo web.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
