--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@ section {
   scroll-margin-top: 80px; /* o lo que mida tu header */
 }
 
-p,h1,h2,h3,h4,h5,h6{
+p,h1,h2,h3,h5,h6{
   color: white;
+}
+
+h4{
+  color: #fe4300;
 }
