--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,218 +1,139 @@
 <h4 class="text-3xl font-bold mb-5">Habilidades</h4>
 
 <div class="flex flex-wrap">
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Angular</p>
-    <div
-      class="bg-red-600 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
+    <div class="bg-red-600 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
       <i class="fa-brands fa-angular"></i>
     </div>
     <p class="mt-1 text-sm">Avanzado</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Flutter</p>
-    <div
-      class="bg-blue-600 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
+    <div class="bg-blue-600 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
       <i class="fa-brands fa-flutter"></i>
     </div>
     <p class="mt-1 text-sm">Avanzado</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">C#</p>
-    <div
-      class="bg-purple-500 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
-      <img
-        class="w-4 h-6 object-contain"
-        src="assets/icons/c-sharp.png"
-        alt="Foto de perfil"
-      />
+    <div class="bg-purple-500 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
+      <img class="w-4 h-6 object-contain" src="assets/icons/c-sharp.png" alt="Foto de perfil" />
     </div>
     <p class="mt-1 text-sm">Intermedio</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">JavaScript</p>
-    <div
-      class="bg-yellow-500 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
+    <div class="bg-yellow-500 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
       <i class="fa-brands fa-js"></i>
     </div>
     <p class="mt-1 text-sm">Avanzado</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">TypeScript</p>
-    <div
-      class="bg-sky-600 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
-      <img
-        class="w-4 h-6 object-contain"
-        src="assets/icons/typescript.png"
-        alt="Foto de perfil"
-      />
+    <div class="bg-sky-600 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
+      <img class="w-4 h-6 object-contain" src="assets/icons/typescript.png" alt="Foto de perfil" />
     </div>
     <p class="mt-1 text-sm">Avanzado</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Html</p>
-    <div
-      class="bg-orange-600 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
+    <div class="bg-orange-600 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
       <i class="fa-brands fa-html5"></i>
     </div>
     <p class="mt-1 text-sm">Avanzado</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Asp .net</p>
-    <div
-      class="bg-white text-black mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
-      <img
-        class="w-4 h-6 object-contain"
-        src="assets/icons/asp-net.png"
-        alt="Foto de perfil"
-      />
+    <div class="bg-white text-black mt-3 py-2 px-4" style="border-radius: 0.5rem">
+      <img class="w-4 h-6 object-contain" src="assets/icons/asp-net.png" alt="Foto de perfil" />
     </div>
     <p class="mt-1 text-sm">Intermedio</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Sql</p>
-    <div
-      class="bg-stone-600 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
+    <div class="bg-stone-600 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
       <i class="fa-solid fa-database"></i>
     </div>
     <p class="mt-1 text-sm">Intermedio</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Bootstrap</p>
-    <div
-      class="bg-violet-700 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
+    <div class="bg-violet-700 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
       <i class="fa-brands fa-bootstrap"></i>
     </div>
     <p class="mt-1 text-sm">Avanzado</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Jira</p>
-    <div
-      class="bg-blue-700 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
+    <div class="bg-blue-700 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
       <i class="fa-brands fa-jira"></i>
     </div>
     <p class="mt-1 text-sm">Intermedio</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Figma</p>
-    <div
-      class="bg-green-600 text-white mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
+    <div class="bg-green-600 text-white mt-3 py-2 px-4" style="border-radius: 0.5rem">
       <i class="fa-brands fa-figma"></i>
     </div>
     <p class="mt-1 text-sm">Intermedio</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Trello</p>
-    <div
-      class="bg-white text-black mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
+    <div class="bg-white text-black mt-3 py-2 px-4" style="border-radius: 0.5rem">
       <i class="fa-brands fa-trello"></i>
     </div>
     <p class="mt-1 text-sm">Intermedio</p>
   </div>
 
-  <div class="inline-flex flex-col w-20 items-center m-4">
+  <div class="inline-flex flex-col w-20 items-center m-3">
     <p class="mt-1 text-sm">Tailwind</p>
-    <div
-      class="bg-blue-600 text-black mt-3 py-2 px-4"
-      style="border-radius: 0.5rem"
-    >
-      <img
-        class="w-4 h-6 object-contain"
-        src="assets/icons/tailwind.svg"
-        alt="Foto de perfil"
-      />
+    <div class="bg-blue-600 text-black mt-3 py-2 px-4" style="border-radius: 0.5rem">
+      <img class="w-4 h-6 object-contain" src="assets/icons/tailwind.svg" alt="Foto de perfil" />
     </div>
     <p class="mt-1 text-sm">Intermedio</p>
   </div>
 </div>
 
 <div class="flex flex-wrap">
-  <p
-    class="m-3 p-2 text-sm text-center bg-zinc-800 text-black"
-    style="border-radius: 0.5rem"
-  >
+  <p class="m-3 p-2 text-sm text-center bg-zinc-800 text-black" style="border-radius: 0.5rem">
     Scrum
   </p>
-  <p
-    class="m-3 p-2 text-sm text-center bg-zinc-800 text-black"
-    style="border-radius: 0.5rem"
-  >
+  <p class="m-3 p-2 text-sm text-center bg-zinc-800 text-black" style="border-radius: 0.5rem">
     Comunicación efectiva
   </p>
-  <p
-    class="m-3 p-2 text-sm bg-zinc-800 text-center text-black"
-    style="border-radius: 0.5rem"
-  >
+  <p class="m-3 p-2 text-sm bg-zinc-800 text-center text-black" style="border-radius: 0.5rem">
     Pensamiento analítico
   </p>
 
-  <p
-    class="m-3 p-2 text-sm bg-zinc-800 text-center flex items-center text-black"
-    style="border-radius: 0.5rem"
-  >
+  <p class="m-3 p-2 text-sm bg-zinc-800 text-center flex items-center text-black" style="border-radius: 0.5rem">
     Adaptabilidad
   </p>
 
-  <p
-    class="m-3 p-2 text-sm bg-zinc-800 text-center text-black"
-    style="border-radius: 0.5rem"
-  >
+  <p class="m-3 p-2 text-sm bg-zinc-800 text-center text-black" style="border-radius: 0.5rem">
     Autonomía y autogestión
   </p>
 
-  <p
-    class="m-3 p-2 text-sm bg-zinc-800 text-center text-black"
-    style="border-radius: 0.5rem"
-  >
+  <p class="m-3 p-2 text-sm bg-zinc-800 text-center text-black" style="border-radius: 0.5rem">
     Trabajo en equipo
   </p>
 
-  <p
-    class="m-3 p-2 text-sm bg-zinc-800 text-center text-black"
-    style="border-radius: 0.5rem"
-  >
+  <p class="m-3 p-2 text-sm bg-zinc-800 text-center text-black" style="border-radius: 0.5rem">
     Orientación a resultados
   </p>
 
-  <p
-    class="m-3 p-2 text-sm bg-zinc-800 text-center text-black"
-    style="border-radius: 0.5rem"
-  >
+  <p class="m-3 p-2 text-sm bg-zinc-800 text-center text-black" style="border-radius: 0.5rem">
     Atención al detalle (especialmente en UI/UX)
   </p>
 </div>
