--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <component-header></component-header>
 
-<main class="mt-35 mx-20">
+<main class="mt-35 mx-10 sm:mx-10 md:mx-20">
   <section class="mb-10 section" id="about">
     <component-about></component-about>
   </section>
