--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,7 @@
-<h4 class="font-bold p-4 line-1 anim-typewriter">
-  Bienvenidos a <span class="text-orange-600"> &lt; Lord / Dev &gt;</span>
-</h4>
+<div class="flex flex-wrap">
+  <h4 class="font-bold text-4xl line anim-typewriter-1">Bienvenidos a</h4>
+  <h3 class="font-bold text-4xl line anim-typewriter-2"> &lt; Lord / Dev &gt;</h3>
+</div>
 
 <div class="flex flex-wrap">
   <div class="w-full md:flex-1 p-4 flex flex-col justify-center">
