--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -2,10 +2,11 @@
 
 <div class="flex flex-wrap -mx-2">
 
-    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/5 p-3">
-        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-lg shadow-sm hover:bg-gray-700">
+    <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/3 xl:w-1/5 p-3">
+        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-t-lg shadow-sm hover:bg-gray-700">
             <div class="flex justify-center">
-                <img class="object-contain h-full w-full" src="assets/images/personales/clearable.webp" alt="">
+                <img class="object-contain h-full w-full rounded-t-lg" src="assets/images/personales/clearable.webp"
+                    alt="">
             </div>
             <div class="flex flex-col justify-between p-4 leading-normal">
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Clearable Dropdown</h5>
@@ -34,10 +35,11 @@
         </div>
     </div>
 
-    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/5 p-3">
-        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-lg shadow-sm hover:bg-gray-700">
+    <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/3 xl:w-1/5 p-3">
+        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-t-lg shadow-sm hover:bg-gray-700">
             <div class="flex justify-center">
-                <img class="object-contain h-full w-full" src="assets/images/personales/lorddev.webp" alt="">
+                <img class="object-contain h-full w-full rounded-t-lg" src="assets/images/personales/lorddev.webp"
+                    alt="">
             </div>
             <div class="flex flex-col justify-between p-4 leading-normal">
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Portafolio v1</h5>
@@ -67,10 +69,11 @@
         </div>
     </div>
 
-    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/5 p-3">
-        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-lg shadow-sm hover:bg-gray-700">
+    <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/3 xl:w-1/5 p-3">
+        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-t-lg shadow-sm hover:bg-gray-700">
             <div class="flex justify-center">
-                <img class="object-contain h-full w-full" src="assets/images/personales/cardmemory.webp" alt="">
+                <img class="object-contain h-full w-full rounded-t-lg" src="assets/images/personales/cardmemory.webp"
+                    alt="">
             </div>
             <div class="flex flex-col justify-between p-4 leading-normal">
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Card Memory</h5>
@@ -98,10 +101,11 @@
         </div>
     </div>
 
-    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/5 p-3">
-        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-lg shadow-sm hover:bg-gray-700">
+    <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/3 xl:w-1/5 p-3">
+        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-t-lg shadow-sm hover:bg-gray-700">
             <div class="flex justify-center">
-                <img class="object-contain h-full w-full" src="assets/images/personales/rickandmorty.webp" alt="">
+                <img class="object-contain h-full w-full rounded-t-lg" src="assets/images/personales/rickandmorty.webp"
+                    alt="">
             </div>
             <div class="flex flex-col justify-between p-4 leading-normal">
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Rick y Morty</h5>
@@ -130,10 +134,11 @@
         </div>
     </div>
 
-    <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/5 p-3">
-        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-lg shadow-sm hover:bg-gray-700">
+    <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/3 xl:w-1/5 p-3">
+        <div class="flex flex-col h-full bg-gray-800 border border-gray-700 rounded-t-lg shadow-sm hover:bg-gray-700">
             <div class="flex justify-center">
-                <img class="object-contain h-full w-full" src="assets/images/personales/country.webp" alt="">
+                <img class="object-contain h-full w-full rounded-t-lg" src="assets/images/personales/country.webp"
+                    alt="">
             </div>
             <div class="flex flex-col justify-between p-4 leading-normal">
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Country Web</h5>
