--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+<footer class="bg-white shadow-sm dark:bg-gray-800">
+    <div class="w-full p-4 md:flex flex-wrap justify-between ">
+        <div class="my-2">
+            <span class="text-sm text-gray-500 text-center dark:text-gray-400">© {{date | date: "yyyy"}} Lord Dev. All
+                Rights Reserved.
+            </span>
+        </div>
+        <div class="my-2">
+
+            <span class="text-sm text-gray-500 mt-3 text-center dark:text-gray-400">marioramosmejia2243&#64;gmail.com
+            </span>
+        </div>
+
+        <ul class="flex items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+            <li>
+                <a href="#" class="hover:underline me-4 md:me-6">Sobre mi</a>
+            </li>
+        </ul>
+    </div>
+</footer>
