--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,33 +1,33 @@
-<nav class="fixed top-0 left-0 right-0 bg-orange-700 z-50 shadow-md flex items-center justify-between">
-  <div class="mx-5">
-    <img src="assets/images/logo.png" alt="Logo" class="h-12 w-12 min-w-12 min-h-12" />
-  </div>
+<header [class.-translate-y-full]="hideHeader"
+  class="fixed z-50 top-0 left-0 right-0 bg-orange-700 px-5 py-2 transition-transform duration-300">
 
-  <ul class="flex justify-end gap-4 p-4 mx-15">
-    <li>
-      <a href="#about"
-        class="nav-link text-xl text-white font-bold py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Sobre
+  <div class="flex items-center justify-between relative">
+
+    <!-- Logo -->
+    <img src="assets/images/logo.png" class="h-12 w-12" alt="Logo" />
+
+    <!-- Hidden checkbox -->
+    <input #menuToggle id="menu-toggle" type="checkbox" class="hidden peer" />
+
+    <label for="menu-toggle" class="lg:hidden block cursor-pointer" (click)="onMenuButtonClick($event)">
+      <i class="fa-solid fa-bars"></i>
+    </label>
+
+    <!-- Menú -->
+    <nav style="z-index: 887;"
+      class="rounded-lg hidden peer-checked:flex flex-col absolute top-full left-0 w-full bg-orange-800 text-white text-xl font-bold px-4 py-2 lg:flex lg:flex-row lg:static lg:w-auto lg:bg-transparent">
+      <a (click)="closeMenu()" href="#about" class="py-2 px-4 hover:bg-white hover:text-orange-700 rounded-full">Sobre
         mí</a>
-    </li>
-    <li>
-      <a href="#experience"
-        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Experiencia</a>
-    </li>
-    <li>
-      <a href="#skills"
-        class="nav-link font-bold text-xl text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Habilidades</a>
-    </li>
-    <li>
-      <a href="#portfolio"
-        class="nav-link font-bold text-xl text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Personal</a>
-    </li>
-    <li>
-      <a href="#education"
-        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Educación</a>
-    </li>
-    <li>
-      <a href="#goals"
-        class="nav-link text-xl font-bold text-white py-1 px-3 rounded-full hover:bg-white hover:text-orange-700 transition">Metas</a>
-    </li>
-  </ul>
-</nav>
+      <a (click)="closeMenu()" href="#experience"
+        class="py-2 px-4 hover:bg-white hover:text-orange-700 rounded-full">Experiencia</a>
+      <a (click)="closeMenu()" href="#skills"
+        class="py-2 px-4 hover:bg-white hover:text-orange-700 rounded-full">Habilidades</a>
+      <a (click)="closeMenu()" href="#portfolio"
+        class="py-2 px-4 hover:bg-white hover:text-orange-700 rounded-full">Proyectos personales</a>
+      <a (click)="closeMenu()" href="#education"
+        class="py-2 px-4 hover:bg-white hover:text-orange-700 rounded-full">Educación</a>
+      <a (click)="closeMenu()" href="#goals"
+        class="py-2 px-4 hover:bg-white hover:text-orange-700 rounded-full">Metas</a>
+    </nav>
+  </div>
+</header>
