--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,10 +9,15 @@ section {
   scroll-margin-top: 80px; /* o lo que mida tu header */
 }
 
-p,h1,h2,h3,h5,h6{
+p,
+h1,
+h2,
+h3,
+h5,
+h6 {
   color: white;
 }
 
-h4{
-  color: #fe4300;
+h4 {
+  color: #cb3500;
 }
